[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/mainmenu2.png" type="Texture" id=1]
[ext_resource path="res://menu.gd" type="Script" id=2]
[ext_resource path="res://UI/Play Button_idle.png" type="Texture" id=3]
[ext_resource path="res://UI/button_hover.png" type="Texture" id=4]
[ext_resource path="res://UI/Play Button_pressed.png" type="Texture" id=5]
[ext_resource path="res://UI/Lighting.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/GameMusic.wav" type="AudioStream" id=7]
[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 192, 108 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 192, 108 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "MainMenu",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 160, 90.0001 )
scale = Vector2( 1.66667, 1.66667 )
frames = SubResource( 5 )
animation = "MainMenu"
playing = true

[node name="Glow" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.219608 )
position = Vector2( 45, 70 )
scale = Vector2( 4.36719, 4.55469 )
frames = SubResource( 9 )
frame = 1
playing = true

[node name="Glow2" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.219608 )
position = Vector2( 277, 71 )
scale = Vector2( 4.36719, 4.55469 )
frames = SubResource( 9 )
frame = 1
playing = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 104.0
margin_top = 120.0
margin_right = 216.0
margin_bottom = 160.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
